# reporting-hub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-pages-reports.yml
config/: delivery-health.json  github-pages-site.json  jira-binding.json  programme-registry.json  quarterly-reporting.json  role-registry.json  sef-project-plan-blocks.json  sef-project-plan-reporting.json
config/profiles/: atlassian.template.json  twoa-programme.template.json
docs/: index.html
docs/dev-done-risk/: README.md  index.html
docs/enterprise/: index.html
docs/epc/: index.html
docs/quarter/: README.md  index.html  milestone.html
docs/sef/: README.md  index.html  project-plan.html
docs/sprint-health/: README.md  index.html
extensions/: __init__.py
scripts/: dev_done_risk.py  publish_delivery_health_pages.py  publish_github_pages_site_index.py  push_to_github.ps1  refresh_delivery_health_pages.sh  refresh_github_pages_reports.sh  setup_twoa_github_pat.ps1  sprint_health.py
scripts/quarterly/: README.md  (+17 more)
tests/: test_burn_allocation_scope.py  test_delivery_health_config.py  test_delivery_health_pages.py  test_delivery_milestones.py  test_epic_timeline.py  test_github_pages_nav.py  test_github_pages_publish.py  test_jira_binding_loader.py  test_jira_burn_credit.py  test_milestone_burn_up.py  test_milestone_report_scope.py  test_milestone_scope_chart.py  test_milestone_timeline.py  test_quarter_scope.py  test_quarterly_dashboard.py  test_quarterly_reporting_config.py  test_release_plan_calendar.py  test_sef_block_scope.py  test_sef_project_plan_timeline.py
(+53 files in other folders)
