[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-reports-twoa"
version = "0.1.0"
description = "TWoA EPCE delivery reports — GitHub Pages snapshots on Artifact core."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "artifact-core",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = [
  "extensions",
  "extensions.twoa_programme",
]

[tool.setuptools.package-dir]
"" = "."
